fix test related to user story 3